# gs-hawk-terminal

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  scanner.py
.github/workflows/: python-package.yml
config/: config.yaml  screeners.yaml  sectors.yaml  strategies.yaml  universe.yaml
core/: alerts.py  backtest.py  data.py  display.py  macro.py  scoring.py  screeners.py  signals.py  strategies.py
gs_hawk_terminal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
