[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gs-hawk-terminal"
version = "1.1.0"
authors = [
  { name="Gaurav Sharma", email="gaurav@example.com" },
]
description = "Professional Bloomberg-style Market Intelligence Terminal for NSE/BSE"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.scripts]
gs-hawk = "scanner:main"

[project.urls]
"Homepage" = "https://github.com/gauravs19/gs-hawk-terminal"
"Bug Tracker" = "https://github.com/gauravs19/gs-hawk-terminal/issues"
