[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gs-hawk-terminal"
version = "1.1.0"
description = "Professional Bloomberg-style Market Intelligence Terminal for NSE/BSE"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "pytz",
]

[project.scripts]
gs-hawk = "scanner:main"

[tool.setuptools]
packages = ["core"]
py-modules = ["scanner"]

[tool.setuptools.package-data]
"*" = ["config/*.yaml"]

[project.urls]
"Homepage" = "https://github.com/gauravs19/gs-hawk-terminal"
"Bug Tracker" = "https://github.com/gauravs19/gs-hawk-terminal/issues"
